Changes to index.html and style.css

--- a/style.css
+++ b/style.css
@@ -3,34 +3,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-left: auto;
     margin-right: auto;
-    background-color: #e6e4d9;
+    background-color: #FFC0CB;
     background-image: url('./images/pattern.png');
 }
 
-#leftmenu {
-    float: left;
-    width: 30%;
-    margin-bottom: 20px;
-}
-
-#main {
-    float: right;
-    width: 70%;
-    margin-bottom: 20px;
-}
-
-footer {
-    clear: both;
-    width: 100%;
-}
-
-.searchbox {
-    padding: 5px;
-    margin: 10px 10px;
-    width: 200px;
-}
-
-th,
-td {
-    padding: 5px;
+h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Veranda, sans-serif;
+    color: #ffffff;
 }
