--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
+@font-face {
+    font-family: 'Apercu Regular';
+    src: url(/fonts/apercu_regular_pro.otf);
+}
+
 body {
     margin-top: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Apercu Regular', 'Tahoma', 'Arial', sans-serif;
     margin-left: auto;
     margin-right: auto;
     background-color: #FFC0CB;
-    background-image: url('./images/pattern.png');
+    background-image: url('./images/imagename.png');
 }
 
-h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Veranda, sans-serif;
-    color: #ffffff;
+
+.topnav {
+    overflow: hidden;
+    font-family: 'Apercu Regular', 'Tahoma', 'Arial', sans-serif;
 }
+  
+h1 {
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
