--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ body {
     font-family: 'Noto_Serif', 'Open Sans', 'Lato', 'Roboto';
     margin-left: auto;
     margin-right: auto;
-    background-color: #FFC0CB;
+    background-color: #000000;
     background-image: url('./images/imagename.png');
 }
   
 h1 {
     font-family: 'Abril_Fatface';
+    color: #ffffff;
+    font-size: 32px;
     margin-top: 0px;
     margin-left: auto;
     margin-right: auto;
@@ -31,7 +33,7 @@ h1 {
     }
     
 .navbar {
-    font-family: 'League_Gothic', 'Arial', 'sans-serif';
+    font-family: 'League_Gothic', 'Avenir', 'Arial', 'sans-serif';
     text-transform: capitalize;
     }
     
@@ -181,4 +183,45 @@ input[type=checkbox]{
 /*Desktop screen size*/
 @media (min-width: 1025px) {
    
+  }
+
+  /* MAIN HOMEPAGE SECTION STYLING */
+  .intro-area {
+    background-image: url('/images/HotSauce1_150dpi.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: auto;
+    color: #FFFFFF;
+  }
+  .h1-hero-headline {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 20px 20px 20px;
+  }
+  .hero-cta {
+    display: inline-block;
+    color: #ffffff;
+    background-color: #000000;
+    border: 0.1rem solid #000000;
+    font-family: 'League_Gothic', 'Avenir', 'Arial', 'sans-serif';
+    padding: 1rem 1.2rem;
+    border-radius: 0.375rem;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  /* ABOUT US SECTION STYLING */
+  .about-us-section {
+    background-color: #4A0A04;
+    color: #ffffff;
+  }
+
+  .hand-pepper {
+    max-width: 100%;
+  }
+
+  /* MENU SECTION STYLING */
+  .menu-section {
+    background-color: #803208;
+    color: #ffffff;
   }
