--- a/style.css
+++ b/style.css
@@ -10,12 +10,24 @@
 body {
     margin-top: 0px;
     font-family: 'Noto_Serif', 'Open Sans', 'Lato', 'Roboto';
+    font-size: 18px;
     margin-left: auto;
     margin-right: auto;
     background-color: #000000;
     background-image: url('./images/imagename.png');
 }
+
+p {
+    font-family: 'Noto_Serif', 'Open Sans', 'Lato', 'Roboto';
+    font-size: 18px; 
+    padding-right: 30px;
+    padding-left: 30px;
+}
   
+a:visited {
+    color: #ffffff;
+  }
+
 h1 {
     font-family: 'Abril_Fatface';
     color: #ffffff;
@@ -177,40 +189,79 @@ input[type=checkbox]{
 
 /*Tablet screen size*/
 @media (min-width: 600px) {
-   
+    .h1-hero-headline {
+        font-size: 3rem;
+      }
+    .about-us {
+        font-size: 3rem;
+    }
+    .menu-hl {
+        font-size: 3rem;
+    }
   }
+
 
 /*Desktop screen size*/
 @media (min-width: 1025px) {
-   
+    .h1-hero-headline {
+        font-size: 5rem;
+      }
+    .about-us {
+        font-size: 5rem;
+    }
+    .menu-hl {
+        font-size: 5rem;
+    }
   }
 
+
+
   /* MAIN HOMEPAGE SECTION STYLING */
+ 
   .intro-image {
-    position:absolute;
-    z-index:-1;
+    background-size: cover;
+    width: 100%;
+    height: auto;
+    position: relative;
   }
   .h1-hero-headline {
     display: flex;
-    justify-content: space-around;
-    padding: 20px 20px 20px 20px;
+    font-family: 'Abril_Fatface';
+    line-height: 1;
+    width: 100%;
+    justify-content: center;
+    position: absolute;
+    top: 15%;
   }
+
   .hero-cta {
-    display: inline-block;
     color: #ffffff;
     background-color: #000000;
     border: 0.1rem solid #000000;
     font-family: 'League_Gothic', 'Avenir', 'Arial', 'sans-serif';
     padding: 1rem 1.2rem;
     border-radius: 0.375rem;
-    font-size: 20px;
+    position: absolute;
+    top: 75%;
+    font-size: 18px;
     font-weight: 700;
+  }
+
+  .intro-fix {
+    position: relative;
+    text-align: center; 
   }
 
   /* ABOUT US SECTION STYLING */
   .about-us-section {
     background-color: #4A0A04;
     color: #ffffff;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+  .about-us {
+    padding-bottom: 10px;
   }
 
   .hand-pepper {
@@ -221,4 +272,39 @@ input[type=checkbox]{
   .menu-section {
     background-color: #803208;
     color: #ffffff;
+    text-align: center;
+    padding-bottom: 20px;
+  }
+
+  .menu-hl {
+    padding-bottom: 10px;
+  }
+
+
+  /* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #000000;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: center;
+    font-size: 32px;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    font-family: 'Abril_Fatface';
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .accordion:hover {
+    background-color: #000000;
+  }
+  
+  /* Style the accordion panel. Note: hidden by default */
+  .panel {
+    padding: 0 180-px;
+    background-color: #803208;
+    display: none;
+    overflow: hidden;
   }
