--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 @font-face {
-    font-family: 'Domine';
-    src: url(/fonts/Domine/Domine-VariableFont_wght.ttf);
-    font-family: 'Montserrat';
-    src: url(/fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
     font-family: 'Oswald';
     src: url(/fonts/oswald/oswald-variablefont_wght.ttf);
+}
+
+@font-face {
+    font-family: 'Domine';
+    src: url(/fonts/Domine/Domine-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url(/fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
 body {
@@ -17,6 +23,7 @@ body {
 
 p {
     font-size: 18px; 
+    font-family: 'Montserrat';
     padding-right: 40px;
     padding-left: 40px;
 }
@@ -214,7 +221,6 @@ a {
   .h1-hero-headline {
     display: flex;
     font-family: 'Domine';
-    line-height: 1;
     width: 100%;
     justify-content: center;
     position: absolute;
@@ -228,6 +234,10 @@ a {
     padding: 1rem 1.2rem;
     border-radius: 0.375rem;
     font-size: 18px;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .hero-cta:hover {
