--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: 'Oswald';
-    src: url(/fonts/oswald/oswald-variablefont_wght.ttf);
+    src: url(fonts/oswald/oswald-variablefont_wght.ttf);
 }
 
 @font-face {
-    font-family: 'Domine';
-    src: url(/fonts/Domine/Domine-VariableFont_wght.ttf);
+    font-family: 'Abril';
+    src: url(fonts/Abril_Fatface/AbrilFatface-Regular.ttf);
 }
 
 @font-face {
     font-family: 'Montserrat';
-    src: url(/fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
+    src: url(fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
 body {
@@ -33,7 +33,7 @@ a:visited {
   }
 
 h1 {
-    font-family: 'Domine';
+    font-family: 'Abril';
     color: #ffffff;
     font-size: 32px;
     margin-top: 0px;
@@ -220,7 +220,7 @@ a {
   }
   .h1-hero-headline {
     display: flex;
-    font-family: 'Domine';
+    font-family: 'Abril';
     width: 100%;
     justify-content: center;
     position: absolute;
@@ -246,7 +246,8 @@ a {
 
   .intro-fix {
     position: relative;
-    text-align: center; 
+    text-align: center;
+    font-size: 0px;
   }
 
 /* ABOUT US SECTION STYLING */
@@ -263,6 +264,7 @@ a {
 
   .hand-pepper {
     max-width: 100%;
+    padding-bottom: 10px;
   }
 
 /* MENU SECTION STYLING */
@@ -271,6 +273,7 @@ a {
     color: #ffffff;
     text-align: center;
     padding-bottom: 20px;
+    padding-top: 10px;
   }
 
   .menu-hl {
